--- a/MVCEasyProject/Views/Products/Create.cshtml
+++ b/MVCEasyProject/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCEasyProject.Models.Product
+﻿@model MVCEasyProject.Models.CreateProductViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -41,7 +41,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control", @Value = Model.Price} })
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
